# ulmeros

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  UlmerOS.files  UlmerOS.includes  makefile  menuconf  menuconf.txt  ulmeros.files  ulmeros.includes  ulmos64.files  ulmos64.includes  update_kernel
arch/amd64/: atomic.c  debug.c  definitions.h  gdt64.c  irq.c  memscan.c  ports.h  start.S  thread.c  timer.c  vspace.c
arch/x86/: CMakeLists.txt  atomic.c  memscan.c  serial.c
arch/x86/amd64/: CMakeLists.txt  amd64.h  archdef.h  boot.h  context.S  context.c  gdt.c  gdt64.c  idt.c  interrupt.S  irq.c  main.c  start.S  thread.c  timer.c  vspace.c
arch/x86/amd64/boot32/: CMakeLists.txt  boot.S  boot32config.h.in  error.c  gdt.c  golong.c  main.c  multiboot.h  types.h
arch/x86/boot32/: boot.S  boot32.h  debug.c  gdt.c  gdt_long.c  golong.c  heap.c  helper.S  main.c  mmap.c  multiboot.h  paging.c
arch/x86/common/: atomic.c  bochs.c  irq.c  timer.c
arch/x86/include/: bootinfo.h  multiboot.h
arch/x86/include/arch/: definitions.h
arch/x86/include/x86/: bootinfo.h  context.h
arch/x86_64/: CMakeLists.txt  x86_64.cmake
arch/x86_64/boot32/: boot.S  boot32.h  boot32mem.c  debug.c  heap.c  helper.S  main.c  paging.c
arch/x86_64/include/: x86
arch/x86_64/x86_64/: context.c  idt.c
boot/: boot.S  boot32.h  boot32.ld  golong.c  heap.c  main.c  multiboot.h  paging.c
diskimage/: CMakeLists.txt  mkimg
drivers/pc/: CMakeLists.txt  ata.c  init.c  menuconf.txt  pci.c  platform.c  ps2kbd.c  serial.c
init/: CMakeLists.txt
kernel/: .gitignore  CMakeLists.txt  debug.c  kernel.ld  menuconf
kernel.old/: debug.c  pipe.c  syscalls.c
kernel.old/fs/: blockdev.c  partitions.c  vfs.c
kernel.old/init/: init.c
kernel.old/libk/: cond.c  kstring.c
kernel.old/mem/: pagefault.c  pages.c
kernel.old/sched/: interrupt.c  loader.c  proc.c  sched.c  task.c  userstack.c
kernel/arch/x86-common/x86/: bochs.c  irq.c
kernel/arch/x86_64/: menuconf.txt  x86
kernel/arch/x86_64/boot32/: boot32.h  boot32mem.c  gdt_long.c  main.c  mmap.c  multiboot.c
kernel/arch/x86_64/include/: arch
kernel/arch/x86_64/x86_64/: main.c  start.S  vspace.c
kernel/bus/: pci.c
kernel/debug/: kprintf.c
kernel/drivers/pc/: CMakeLists.txt  init.c  menuconf.txt  pci.c  ps2kbd.c  serial.c
kernel/fs/: blockdev.c  ext2fs.c  iosched.c  partitions.c  partscan.c  ramdisk.c  ramfs.c  syscall.c  vfs.c
kernel/include/: Boot64.h  arch.h  asm.h  boot.h  config.h  debug.h  errno.h  init.h  interrupt.h  memory.h  proc.h  sched.h  syscall-ids.h  syscall-no.h  syscalls.h  task.h  types.h  version.h  version.h.in  vspace.h
kernel/include/arch/: common.h  context.h  debug.h  platform.h  serial.h
kernel/include/bus/: pci.h
kernel/include/fs/: blockdev.h  ramdisk.h  ramfs.h  vfs.h
kernel/include/mm/: memory.h  vspace.h
kernel/include/sched/: interrupt.h  loader.h  mutex.h  proc.h  task.h  userstack.h
kernel/init/: init.c  main.c  start.S
kernel/kernel/: CMakeLists.txt
kernel/kernel/debug/: kprintf.c  panic.c
kernel/kernel/fs/: blkdev_ops.c  blockdev.c  ext2fs.c  ffind.c  fs_syscall.c  partscan.c  ramdisk.c  vfs.c
kernel/kernel/include/: cmdline.h  debug.h  syscalls.h  time.h
kernel/kernel/include/arch/: common.h  context.h  platform.h
kernel/kernel/include/bus/: pci.h
kernel/kernel/include/fs/: blockdev.h  devfs.h  vfs.h
kernel/kernel/include/mm/: memory.h  vspace.h
kernel/kernel/include/sched/: loader.h  mutex.h  proc.h  sched.h  task.h  tasklist.h  userstack.h
kernel/kernel/init/: cmdline.c
kernel/kernel/mm/: heap.c  page.c  pagefault.c  sbrk.c
kernel/kernel/sched/: interrupt.c  loader.c  mutex.c  proc.c  sched.c  spinlock.c  syscalls.c  task.c  tasklist.c  userstack.c
kernel/kernel/time/: time.c
kernel/libk/: kstring.c  list.c  mutex.c
kernel/libk/include/: cond.h  kstring.h  list.h  mutex.h
kernel/libutil/: bitmap.c  list.c  sprintf.c  string.c
kernel/libutil/include/util/: bitmap.h  list.h  queue.h  string.h  system.h  types.h
kernel/mem/: kmalloc.c  pagefault.c  pages.c
kernel/mm/: heap.c  page.c  pagefault.c
kernel/sched/: context.c  interrupt.c  loader.c  mutex.c  proc.c  sched.c  scheduler.c  syscalls.c  task.c  tasklist.c  userstack.c
libutil/: CMakeLists.txt  Makefile  bitmap.c  list.c  mutex.c  string.c
libutil/include/: debug.h
libutil/include/mem/: regions.h  vspace.h
libutil/include/util/: bitmap.h  list.h  mutex.h  string.h  system.h  types.h
newlib/: CMakeLists.txt  build
tools/: grub.cfg  mkimg  mkimg.sh  qemu.sh  version.sh
userspace/: CMakeLists.txt
userspace/init/: Makefile  init.c
userspace/lib/: CMakeLists.txt
userspace/lib/include/: errno.h  fcntl.h  unistd.h
userspace/lib/include/sys/: time.h.autosave  times.h  types.h
userspace/lib/libc-core/: CMakeLists.txt
userspace/lib/libc-core/unix/: unistd.c
userspace/lib/libc-system/: CMakeLists.txt
userspace/lib/libc-system/arch/amd64/: memmove.c  syscall.S
userspace/lib/libc-system/functions/_PDCLIB/: _PDCLIB_fillbuffer.c  _PDCLIB_flushbuffer.c  _PDCLIB_open.c  _PDCLIB_rename.c
userspace/lib/libc-system/functions/threads/: cnd_timedwait.c  mtx_destroy.c  mtx_lock.c  mtx_timedlock.c  mtx_trylock.c  mtx_unlock.c  thrd_sleep.c
userspace/lib/libc-system/functions/time/: clock.c  time.c  timespec_get.c
userspace/lib/libc-system/system/: crt0.c  file.c  syscall.c  syscall.h  system.c
userspace/libc/: CMakeLists.txt  amd64.ld  crt0.c  printf.c  stdlib.c  unistd.c
userspace/libc/include/: stdlib.h  unistd.h
userspace/newlib/: CMakeLists.txt  amd64.ld
userspace/newlib/arch/: CMakeLists.txt
userspace/newlib/newlib-core/: CMakeLists.txt
userspace/newlib/newlib-core/include/: newlib.h
userspace/newlib/newlib-core/posix/: collate.c  engine.c  execvp.c
userspace/newlib/newlib-core/sys/ulmeros/: crt0.c  file.c  system.c  ulm_syscall.h
userspace/newlib/newlib-core/syscalls/: sysisatty.c
userspace/newlib/newlib-core/time/: gettzinfo.c
userspace/progs/: CMakeLists.txt  a.out  init.c  shell.c
util/: x86_64.ld
util/init/: init  (+2 more)
(+7 files in other folders)
