cmake_minimum_required(VERSION 3.15)

if("${ARCH}" STREQUAL "amd64")
    set(ARCH "x86_64")
endif()

file(GLOB_RECURSE ARCH_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${ARCH}/*.c")
file(GLOB_RECURSE ARCH_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/${ARCH}/*.h")
file(GLOB_RECURSE ARCH_ASM_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${ARCH}/*.S")

add_library(newlib-arch ${ARCH_SOURCES} ${ARCH_ASM_SOURCES} ${ARCH_HEADERS})
